--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../assets/chili.png");
-  background-size: 20%;
+  /*background-image: url("../assets/chili.png");*/
+  /*background-size: 20%;*/
 }
 
