--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -5,6 +5,9 @@
   padding-bottom: 5px;
   border: 1px grey solid;
 }
+img {
+  width: 900px;
+}
 
 .list-group {border-radius: 0;}
 .list-group .list-group-item {background-color: transparent;overflow: hidden;border: 0;border-radius: 0;padding: 0 16px;}
