--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,12 @@
-
+<app-navbar term="term"></app-navbar>
 
 <div style="margin-top: 5%" class="container">
   <div class="row">
-    <div class="row">
+
+    <div style="margin-bottom: 5%" *ngFor="let m of musics | filter:term" class="row">
       <div class="col-xs-12 col-sm-3 col-md-3">
         <a href="#">
-          <img src="../../assets/summer.jpg" class="img-responsive img-box img-thumbnail">
+          <img [src]="m.image" class="img-responsive img-box img-thumbnail">
         </a>
       </div>
       <div class="col-xs-12 col-sm-9 col-md-9">
@@ -19,55 +20,20 @@
             <div class="row-content">
               <div class="list-group-item-heading">
                 <a href="https://soundcloud.com/chillizmusic/" title="Chilliz">
-                  <small>Chilliz</small>
+                  <small>{{ m.author }}</small>
                 </a>
               </div>
               <small>
-                <i class="glyphicon glyphicon-time"></i> 3 days ago via <span class="twitter"> <i class="fa fa-twitter"></i> <a target="_blank" href="http://www.soundclound.com/chillizmusic" alt="soundcloud" title="Check us on soundcloud">Soundcloud</a></span>
+                <i class="glyphicon glyphicon-time"></i> Released: {{ m.released }}<span class="twitter"> <i class="fa fa-twitter"></i> <a target="_blank" href="http://www.soundclound.com/chillizmusic" alt="soundcloud" title="Check us on soundcloud">Soundcloud</a></span>
                 <br>
-                <span class="explore"><i class="glyphicon glyphicon-th"></i> <a href="https://soundcloud.com/chillizmusic/fresh-and-summery">Fresh And Summery</a></span>
+                <span class="explore"><i class="glyphicon glyphicon-th"></i> <a href="https://soundcloud.com/chillizmusic/fresh-and-summery">{{ m.name }}</a></span>
               </small>
             </div>
           </div>
         </div>
-        <h4><a href="#">This is how you feel fresh</a></h4>
-        <p>Throw your outfit away, you don't need it. Just go outside and run laughing.</p>
-        <iframe width="100%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/383937692&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
-      </div>
-    </div>
-    <hr>
-
-    <div class="row">
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <a href="#">
-          <img src="../../assets/FDR0906B.jpg" class="img-responsive img-box img-thumbnail">
-        </a>
-      </div>
-      <div class="col-xs-12 col-sm-9 col-md-9">
-        <div class="list-group">
-          <div class="list-group-item">
-            <div class="row-picture">
-              <a href="https://soundcloud.com/chillizmusic/">
-                <img class="circle img-thumbnail img-box" src="../../assets/chili.png">
-              </a>
-            </div>
-            <div class="row-content">
-              <div class="list-group-item-heading">
-                <a href="https://soundcloud.com/chillizmusic/" title="Chilliz">
-                  <small>Chilliz</small>
-                </a>
-              </div>
-              <small>
-                <i class="glyphicon glyphicon-time"></i> 3 days ago via <span class="twitter"> <i class="fa fa-twitter"></i> <a target="_blank" href="http://www.soundclound.com/chillizmusic" alt="soundcloud" title="Check us on soundcloud">Soundcloud</a></span>
-                <br>
-                <span class="explore"><i class="glyphicon glyphicon-th"></i> <a href="https://soundcloud.com/chillizmusic/mister-president">Mr President</a></span>
-              </small>
-            </div>
-          </div>
-        </div>
-        <h4><a href="#">We are thankful</a></h4>
-        <p>Listening to this may cause patriotism and trigger you will to save the world.</p>
-        <iframe width="100%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/383936336&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+        <h4><a href="#">{{ m.title }}</a></h4>
+        <p>{{ m.article }}</p>
+        <iframe width="100%" height="100" scrolling="no" frameborder="no" [src]="m.src | safe"></iframe>
       </div>
     </div>
     <hr>
