--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,6 @@
-<app-navbar term="term"></app-navbar>
-
 <div style="margin-top: 5%" class="container">
   <div class="row">
-
+    Search for a music: <input type="text" [(ngModel)]="term" />
     <div style="margin-bottom: 5%" *ngFor="let m of musics | filter:term" class="row">
       <div class="col-xs-12 col-sm-3 col-md-3">
         <a href="#">
